# test_tasks

./: .gitignore  .gitmodules  README.md
task_01/: CMakeLists.txt  Makefile  main.c  test_runner.c
task_01/get_uniq_num/: get_uniq_num.c  get_uniq_num.h
task_01/get_uniq_num_mantests/: manual_tests.c  manual_tests.h
task_01/test_data/: test_001_arr21_res=11.txt  test_002_arr19_res=11.txt
task_02_files_checker/: CMakeLists.txt  Makefile  files_checker.c  files_checker.h  main.c  program_info.h  test_runner.c
task_02_files_checker/test_files/: fw_A.md5
task_02_files_checker/test_files/112/: fw_Aa.md5
task_02_files_checker/test_files/test_03_2filesErrMd5/: fw_01.md5
task_02_files_checker/test_files/test_03_2filesErrMd5/112/: fw_Ab.md5  fw_Ba.md5
task_02_files_checker/test_files/test_04_2missMd5/: fw_02.md5
